# oftchatbot

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SECURITY.md  components.json  docker-compose.yml  lint-staged.config.mjs  oftchatbot.json  oftwhatsapp-flow.json  package.json  payload.txt  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.server.json
.cursor/rules/: git-workflow.mdc  oftagenda-payments.mdc  oftchatbot-guidance.mdc  writing-quality.mdc
.github/: SECURITY.md
.github/workflows/: oftbackend.yml  split-repositories.yml
.husky/: pre-commit  pre-push
infra/waha/: docker-compose.yml
oftagenda/: .browserslistrc  .env.example  .gitignore  README.md  SECURITY.md  components.json  next.config.ts  package.json  redirects.ts  tsconfig.json
oftagenda/.husky/: pre-commit  pre-push
oftagenda/convex/: admin.ts  appointments.ts  auth.config.ts  history.ts  n8n.ts  patients.ts  phoneLinks.ts  schema.ts  stripe.ts  triage.ts  user_roles.ts
oftagenda/docs/: n8n-api.md
oftbackend/: .env.example  Cargo.toml  README.md  openapi.yaml  package.json
oftbackend/docs/: cutover-runbook.md
oftbackend/src/: app_state.rs  auth.rs  config.rs  convex_client.rs  http_api.rs  lib.rs  main.rs  observability.rs  resilience.rs
oftbackend/tests/: openapi_contract.rs  resilience.rs
oftchatbot/: README.md  package.json
oftleonardo/: .env.example  .gitignore  README.md  SECURITY.md  astro.config.mjs  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
scripts/: split-package-push.sh  submodules-to-plain-tree.sh
src/app/: globals.css  (+1 more)
(+475 files in other folders)
