[package]
name = "oftbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
convex = "0.10.3"
dotenvy = "0.15.7"
futures = "0.3.31"
http = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
